--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bomdi/codebox",
-  "version": "1.0.12",
+  "name": "@bruh-codes/codebox",
+  "version": "1.0",
   "license": "ISC",
   "description": "Code syntax highlighting tool for Editor.js",
   "keywords": [
@@ -10,7 +10,7 @@
     "Code highlight",
     "Syntax highlight"
   ],
-  "author": "Adombang Munang Mbomndih <dzedock@gmail.com> (https://bomdisoft.com)",
+  "author": "Kamasah Dickson <kamasahdickson19@gmail.com> (https://kamasahdickson.vercel.app)",
   "contributors": [],
   "repository": {
     "type": "git",
