--- a/package.json
+++ b/package.json
@@ -1,40 +1,39 @@
 {
-  "name": "@bruh-codes/codebox",
-  "version": "1.0.0",
-  "license": "ISC",
-  "description": "Code syntax highlighting tool for Editor.js",
-  "keywords": [
-    "Editor.js",
-    "Code",
-    "Code Syntax",
-    "Code highlight",
-    "Syntax highlight"
-  ],
-  "author": "Kamasah Dickson <kamasahdickson19@gmail.com> (https://kamasahdickson.vercel.app)",
-  "contributors": [],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Bruh-Codes/-bruh-codes-codebox"
-  },
-  "scripts": {
-    "build": "webpack --progress",
-    "build:dev": "webpack --mode development --watch",
-    "start": "node test.js"
-  },
-  "devDependencies": {
-    "@babel/core": "7.5.5",
-    "@babel/node": "^7.8.4",
-    "@babel/preset-env": "7.5.5",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "8.0.6",
-    "css-loader": "^7.1.2",
-    "eslint": "^9.33.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^5.101.0",
-    "webpack-cli": "^6.0.1"
-  },
-  "files": [
-    "dist"
-  ],
-  "main": "dist/index.min.js"
+	"name": "@bruh-codes/codebox",
+	"version": "1.0.1",
+	"license": "ISC",
+	"description": "Code syntax highlighting tool for Editor.js",
+	"keywords": [
+		"Editor.js",
+		"Code",
+		"Code Syntax",
+		"Code highlight",
+		"Syntax highlight"
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Bruh-Codes/bruh-codes-codebox"
+	},
+	"main": "dist/index.min.js",
+	"files": [
+		"dist"
+	],
+	"scripts": {
+		"build": "webpack --progress",
+		"build:dev": "webpack --mode development --watch",
+		"start": "node test.js"
+	},
+	"devDependencies": {
+		"@babel/core": "7.5.5",
+		"@babel/node": "^7.8.4",
+		"@babel/preset-env": "7.5.5",
+		"babel-eslint": "^10.0.3",
+		"babel-loader": "8.0.6",
+		"css-loader": "^7.1.2",
+		"eslint": "^9.33.0",
+		"style-loader": "^0.21.0",
+		"webpack": "^5.101.0",
+		"webpack-cli": "^6.0.1"
+	},
+	"packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
