--- a/package.json
+++ b/package.json
@@ -20,17 +20,12 @@
 	],
 	"scripts": {
 		"build": "webpack --progress",
-		"build:dev": "webpack --mode development --watch",
-		"start": "node test.js"
+		"build:dev": "webpack --mode development --watch"
 	},
 	"devDependencies": {
 		"@babel/core": "7.5.5",
-		"@babel/node": "^7.8.4",
-		"@babel/preset-env": "7.5.5",
-		"babel-eslint": "^10.0.3",
 		"babel-loader": "8.0.6",
 		"css-loader": "^7.1.2",
-		"eslint": "^9.33.0",
 		"style-loader": "^0.21.0",
 		"webpack": "^5.101.0",
 		"webpack-cli": "^6.0.1"
